3/7/12 BeersLawSolution: doc, eliminate duplication of colors, convert colors from hex to RGB
3/7/12 eliminate duplication of saturated concentration values
3/7/12 reduce width of concentration text field
3/7/12 render ruler after Reset All button, so that Reset All button doesn't get obscured
3/7/12 move model-view location debugger to upper-right
3/7/12 simplify wavelength control, replace enum with boolean
3/7/12 when lambdaMax radio button is selected, set light wavelength to current solution's lambdaMax
3/7/12 Beers: rename "solid beam" to "beam" throughout, since there's only one representation now
3/7/12 Beers: delete "photon view" feature, representation can't handle the range [62302],[62303],[62311]
# 0.00.17 (62294) Mar 7, 2012
3/7/12 Concentration: new color scheme from JC
3/7/12 restore wavelength control
3/7/12 cleanup uses of ChangeObserver (used mainly to rewire view components to mutable model properties)
# 0.00.16 (62265) Mar 6, 2012
3/6/12 dev version with Color Scheme Editor
3/6/12 update view when color scheme changes (everything except precipitate that already exists)
3/6/12 user interface completed for color scheme editor (not everything is updating properly yet, since colors were never intended to be mutable)
3/6/12 Concentration: add color schemes to model, stub button for opening editor
3/6/12 reorganize class for dev model properties, rename ConcentrationModelDialog
3/6/12 remove all photons on Reset All
3/6/12 center ruler under cuvette
3/6/12 tweak size and velocity of photons, use image caching to improve performance
3/6/12 put a gray outline around the beam, so that lighter colors are still visible
3/6/12 add ruler insets to model, start with ruler aligned with left edge of cuvette
3/6/12 change label "% Transmittance" to "Transmittance" on detector
3/5/12 first pass at photon beam (model and view), does not interact with solution or detector
3/5/12 rename Beam to SolidBeam