@@ -9,7 +9,6 @@ DESIGN
 HIGH
 - add wavelength and absorptivity properties to BeersLawSolution
 - implement wavelength-to-absorptivity functions, using JC's experimental data
-- why does wavelength slider get stuck at 630 when you start by trying to drag it to the right?
 
 MEDIUM
 - common: #3242, make combo box popup appear on top of everything in the scenegraph
