@@ -1,3 +1,4 @@
+3/7/12 add workaround for #3267, problem with wavelength slider
 3/7/12 BeersLawSolution: doc, eliminate duplication of colors, convert colors from hex to RGB
 3/7/12 eliminate duplication of saturated concentration values
 3/7/12 reduce width of concentration text field
